# process-meteoblue-hub

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  implementation-logic.md  lambda-entrypoint.sh  pyproject.toml  repository-metadata.yaml
.github/: copilot-instructions.md
.github/eng/: validate-skills.mjs
.github/instructions/: docs.instructions.md  general.instructions.md
.github/prompts/: code-exemplars-blueprint-generator.prompt.md  copilot-instructions-blueprint-generator.prompt.md
.github/scripts/: check-ts.js  run-eslint.js  validate-json.js
.github/skills/gdal-ogr/: SKILL.md
.github/skills/geopandas/: SKILL.md
.github/workflows/: ci-checks.yml
context/: api-references.json  backend-tools.json  components.json  dependencies.json  index.json  languages.json
lambda/: lambda_function.py
legacy/: meteoblue_precipitation_retriever.py
src/process_meteoblue_hub/: __init__.py  main.py
src/process_meteoblue_hub/meteoblue/: __init__.py  _consts.py  meteoblue_ingestor.py  meteoblue_ingestor_processor.py  meteoblue_retriever.py  meteoblue_retriever_processor.py
src/process_meteoblue_hub/utils/: filesystem.py
